syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/yudanl96/revive/pb";

message CreateUserRequest{
    string username = 1; 
    string email = 2; 
    string password = 3;
}

message CreateUserResponse{
    User user = 1;
}



