syntax = "proto3";

package pb;

import "rpc_create_user.proto";
import "rpc_update_user.proto";

option go_package = "github.com/yudanl96/revive/pb";

service Revive{
    //unary grpc
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse){}
}

